2005-08-06  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/BaseImageVisitor.cs
	  Mono.Cecil.Binary/ImageReader.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Metadata/BaseMetadataVisitor.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataInitializer.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/MetadataStream.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/CodeWriter.cs:
		Add helpers visitor.
		On going work on the writing layer.

	* CodeGen/templates/Utilities.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/StringsHeap.cs
	  Mono.Cecil.Metadata/MetadataRowReader.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/Utilities.cs
	  Mono.Cecil.Metadata/BlobHeap.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Metadata/MetadataHeap.cd
	  Mono.Cecil.Metadata/GuidHeap.cs:
		On going work on the writing layer.

	* CodeGen/templates/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs:
		On going work on the writing layer.
	* Mono.Cecil.Implem/StructureWriter.cs:
		Correctly override methods
	* CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Fix build warnings.

	* Mono.Cecil/IResource.cs
	  Mono.Cecil.Implem/AssemblyLinkedResource.cs
	  Mono.Cecil.Implem/EmbeddedResource.cs
	  Mono.Cecil.Implem/LinkedResource.cs
	  Mono.Cecil.Implem/Resource.cs:
		Rename field Attributes to Flags for the sake of consistency.
	* Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/StructureWriter.cs:
		On going work on the writing layer.
	* Mono.Cecil.Implem/StructureReader.cs:
		Style.
