@@ -49,7 +49,7 @@ namespace Mono.Cecil.Binary {
 			}
 
 			public void SetDefaultValues ()
-			{<% header.fields.each { |f| print("\n\t\t\t" +  f.property_name + " = " + f.default + ";") unless f.default.nil? } %>
+			{<% header.fields.each { |f| print("\n\t\t\t\t" +  f.property_name + " = " + f.default + ";") unless f.default.nil? } %>
 			}
 
 			public void Accept (IBinaryVisitor visitor)
@@ -66,7 +66,7 @@ namespace Mono.Cecil.Binary {
 			}
 
 			public void SetDefaultValues ()
-			{<% header.fields.each { |f| print("\n\t\t\t" +  f.property_name + " = " + f.default + ";") unless f.default.nil? } %>
+			{<% header.fields.each { |f| print("\n\t\t\t\t" +  f.property_name + " = " + f.default + ";") unless f.default.nil? } %>
 			}
 
 			public void Accept (IBinaryVisitor visitor)
@@ -83,7 +83,7 @@ namespace Mono.Cecil.Binary {
 			}
 
 			public void SetDefaultValues ()
-			{<% header.fields.each { |f| print("\n\t\t\t" +  f.property_name + " = " + f.default + ";") unless f.default.nil? } %>
+			{<% header.fields.each { |f| print("\n\t\t\t\t" +  f.property_name + " = " + f.default + ";") unless f.default.nil? } %>
 			}
 
 			public void Accept (IBinaryVisitor visitor)
